border-color-distorted resolved

--- a/src/Components/Input/input-component.css
+++ b/src/Components/Input/input-component.css
@@ -80,6 +80,7 @@
   background: inherit;
   width: 100%;
   height: 100%;
+  background: transparent;
 }
 
 .ibmplexsans-regular-normal-monsoon-16px {
